gl31-master/src/test/deca/context/invalid/complet/bad_cast7.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 11 : Erreur, 'floa' n'existe pas
//
// Historique:
//    cree le 24/01/2021
{
    int a
    //float f = (floa)(a);
}
